0032540: RWGltf_CafReader - optional "scene" parameter encoded as mandatory

First scene is now loaded when default one is undefined.